translated into Polish and converted into a student project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>Заголовок</title>
+	<title>Strona nauczyciela</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,14 +37,10 @@
 				<div class="container">
 					<div class="col-md-12">
 						<div class="row">
-							<div class="top_links">
-								<a href="#" target="_blank">Вхід</a> / 
-								<a href="#" target="_blank">Реєстрація</a>
-							</div>
 							<div class="soc_buttons">
-								<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-								<a href="#"><i class="fa fa-vk"></i></a>
-								<a href="#"><i class="fa fa-envelope-o"></i></a>
+								<a href="https://ok.ru/"><i class="fa fa-odnoklassniki"></i></a>
+								<a href="https://vk.com/"><i class="fa fa-vk"></i></a>
+								<a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa fa-envelope-o"></i></a>
 							</div>
 						</div>
 					</div>
@@ -56,31 +52,24 @@
 					<div class="col-md-12">
 						<div class="row">
 							<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
-							<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
+							<a href="index.html" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
 					<div class="border"></div>
 					<div class="col-md-9">
 						<div class="row">
 							<div class="main_menu">
 								<ul class="sf-menu">
-									<li class="active icon_mob"><a href="#"><img src="img/menu_icons/home.png" alt="home_icon">Головна</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/file.png" alt="file_icon">Методички</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/archive.png" alt="archive_icon">Бух облік</a>
-										<ul class="submenu">
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Алалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Махалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Мухалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Тундурик</a></li>
-										</ul>
+									<li class="active icon_mob"><a href="index.html"><img src="img/menu_icons/home.png" alt="home_icon">Glowna</a></li>
+									<li class="icon_mob"><a href="zadania.html"><img src="img/menu_icons/archive.png" alt="archive_icon">Archiwum zadan</a>
 									</li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+									<li class="icon_mob"><a href="galeria_zdjec.html"><img src="img/menu_icons/folder.png" alt="folder_icon">Galeria zdjec</a></li>
+									<li class="icon_mob"><a href="materialy_z_zajec.html"><img src="img/menu_icons/file.png" alt="file_icon">Materialy z zajec</a></li>
 								</ul>
 							</div>
 						</div>
 					</div>
 								<div id="sb-search" class="sb-search">
 									<form>
-										<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
+										<input class="sb-search-input" placeholder="Wyszukiwana fraza" type="text" value="" name="search" id="search">
 										<input class="sb-search-submit" type="submit" value="">
 										<span class="sb-icon-search"></span>
 									</form>
@@ -99,31 +88,19 @@
 										<div class="sl__slide">
 											<img src="images/sl1.jpg" alt="Картинка слайда1" class="sl__img">
 											<div class="sl__text">
-												<h3 class="sl__zag">Слайд 1</h3>
+												<h3 class="sl__zag">Uczymy sie</h3>
 											</div>
 										</div>
 										<div class="sl__slide">
 											<img src="images/sl2.jpg" alt="Картинка слайда2" class="sl__img">
 											<div class="sl__text">
-												<h3 class="sl__zag">Слайд 2</h3>
+												<h3 class="sl__zag">Konkurs</h3>
 											</div>
 										</div>
 										<div class="sl__slide">
 											<img src="images/sl3.jpg" alt="Картинка слайда3" class="sl__img">
 											<div class="sl__text">
-												<h3 class="sl__zag">Слайд 3</h3>
-											</div>
-										</div>
-										<div class="sl__slide">
-											<img src="images/sl4.jpg" alt="Картинка слайда4" class="sl__img">
-											<div class="sl__text">
-												<h3 class="sl__zag">Слайд 4</h3>
-											</div>
-										</div>
-										<div class="sl__slide">
-											<img src="images/sl5.jpg" alt="Картинка слайда5" class="sl__img">
-											<div class="sl__text">
-												<h3 class="sl__zag">Слайд 5</h3>
+												<h3 class="sl__zag">Znowu uczymy sie</h3>
 											</div>
 										</div>
 								</div>
@@ -137,89 +114,89 @@
 				<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
 					<div class="row">
 						<div class="blog_content">
-							<div class="zagolov">Цікаві статті</div>
+							<div class="zagolov">Ciekawe artykuly</div>
 								<div class="box_blog">
 									<div class="col-md-12">
-											<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
+											<div class="post_title"><h2><a href="single.html">Naglowek artykulu</a></h2></div>
 											<div class="post_meta">
 												<ul>
 												<li><i class="fa fa-eye"></i>144</li>
 												<li><i class="fa fa-check-square"></i>Mishina</li>
 												<li><i class="fa fa-calendar"></i>04.06.2014</li>
-												<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+												<li><i class="fa fa-commenting-o"></i>komentarze (0)</li>
 											</ul>
 										</div>
 									</div>
 									<div class="test clearfix">
 										<div class="col-md-3 col-sm-3 col-xs-3">
-											<a href="#"><img class="post_img" src="img/1c.png" alt="1c"></a>
+											<a href="single.html"><img class="post_img" src="img/1c.png" alt="1c"></a>
 										</div>
 										<div class="col-md-9 col-sm-9 col-xs-9">
-											<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,
-											обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
-											«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
-											у всіх етапах тренінгу.За підсумками проведення заходу  учасники були нагороджені сертифікатами, грамотами та пам’ятними ...</p>
+											<div class="post_text"><p>  Stworzono ciekawy i zróżnicowany program dla studentów,
+												omówienie problematycznych zagadnień. Praktyczny blok szkoleniowy został przeprowadzony w formie gry biznesowej
+												„Księgowość Lukomorye” i „Marketing w moim życiu”. Studenci aktywnie uczestniczyli
+												Na wszystkich etapach szkolenia, po zakończeniu wydarzenia wręczono uczestnikom certyfikaty, dyplomy i pamiątkowe ...</p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-12">
-										<div class="read_more"><a href="#">Далі</a></div>
+										<div class="read_more"><a href="single.html">Dalej</a></div>
 									</div>
 								</div>
 								<div class="box_blog">
 									<div class="col-md-12">
-											<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
+											<div class="post_title"><h2><a href="single.html">Naglowek artykulu</a></h2></div>
 											<div class="post_meta">
 												<ul>
 												<li><i class="fa fa-eye"></i>144</li>
 												<li><i class="fa fa-check-square"></i>Mishina</li>
 												<li><i class="fa fa-calendar"></i>04.06.2014</li>
-												<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+												<li><i class="fa fa-commenting-o"></i>komentarze (0)</li>
 											</ul>
 										</div>
 									</div>
 									<div class="test clearfix">
 										<div class="col-md-3 col-sm-3 col-xs-3">
-											<a href="#"><img class="post_img" src="img/1c.png" alt="1c"></a>
+											<a href="single.html"><img class="post_img" src="img/1c.png" alt="1c"></a>
 										</div>
 										<div class="col-md-9 col-sm-9 col-xs-9">
-											<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,
-											обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
-											«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
-											у всіх етапах тренінгу.За підсумками проведення заходу  учасники були нагороджені сертифікатами, грамотами та пам’ятними ...</p>
+											<div class="post_text"><p>  Stworzono ciekawy i zróżnicowany program dla studentów,
+												omówienie problematycznych zagadnień. Praktyczny blok szkoleniowy został przeprowadzony w formie gry biznesowej
+												„Księgowość Lukomorye” i „Marketing w moim życiu”. Studenci aktywnie uczestniczyli
+												Na wszystkich etapach szkolenia, po zakończeniu wydarzenia wręczono uczestnikom certyfikaty, dyplomy i pamiątkowe ...</p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-12">
-										<div class="read_more"><a href="#">Далі</a></div>
+										<div class="read_more"><a href="single.html">Dalej</a></div>
 									</div>
 								</div>
 								<div class="box_blog">
 									<div class="col-md-12">
-											<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
+											<div class="post_title"><h2><a href="single.html">Naglowek artykulu</a></h2></div>
 											<div class="post_meta">
 												<ul>
 												<li><i class="fa fa-eye"></i>144</li>
 												<li><i class="fa fa-check-square"></i>Mishina</li>
 												<li><i class="fa fa-calendar"></i>04.06.2014</li>
-												<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+												<li><i class="fa fa-commenting-o"></i>komentarze (0)</li>
 											</ul>
 										</div>
 									</div>
 									<div class="test clearfix">
 										<div class="col-md-3 col-sm-3 col-xs-3">
-											<a href="#"><img class="post_img" src="img/1c.png" alt="1c"></a>
+											<a href="single.html"><img class="post_img" src="img/1c.png" alt="1c"></a>
 										</div>
 										<div class="col-md-9 col-sm-9 col-xs-9">
-											<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,
-											обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
-											«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
-											у всіх етапах тренінгу.За підсумками проведення заходу  учасники були нагороджені сертифікатами, грамотами та пам’ятними ...</p>
+											<div class="post_text"><p>  Stworzono ciekawy i zróżnicowany program dla studentów,
+												omówienie problematycznych zagadnień. Praktyczny blok szkoleniowy został przeprowadzony w formie gry biznesowej
+												„Księgowość Lukomorye” i „Marketing w moim życiu”. Studenci aktywnie uczestniczyli
+												Na wszystkich etapach szkolenia, po zakończeniu wydarzenia wręczono uczestnikom certyfikaty, dyplomy i pamiątkowe ...</p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-12">
-										<div class="read_more"><a href="#">Далі</a></div>
+										<div class="read_more"><a href="single.html">Dalej</a></div>
 									</div>
 								</div>
 						</div>
@@ -230,46 +207,42 @@
 					<div class="col-lg-3 col-md-4">
 						<div class="row">
 							<div class="sidebar1">
-								<div class="zagolov" id="zagolov_sidebar">Останні записи</div>
+								<div class="zagolov" id="zagolov_sidebar">Aktualnosci</div>
 								<div class="recposts">
 									<ul>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
 									</ul>
 								</div>
 							</div>
 
 							<div class="sidebar2">
-								<div class="zagolov" id="zagolov_sidebar">Корисні посилання</div>
+								<div class="zagolov" id="zagolov_sidebar">Przydatne linki</div>
 								<div class="useflinks">
 									<ul>
-										<li><a href="#"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
 									</ul>
 								</div>
 							</div>
 
 							<div class="sidebar3">
-								<div class="zagolov" id="zagolov_sidebar">Статистика</div>
+								<div class="zagolov" id="zagolov_sidebar">Statystyki</div>
 								<div class="statistics">
 									<ul>
-										<li>Онлайн всього: 1</li>
-										<li>Гостей: 1</li>
-										<li>Користувачів: 0</li>
+										<li>Teraz na stronie: 1</li>
+										<li>Gosci: 1</li>
+										<li>Uzytkownicy: 234</li>
 									</ul>
 								</div>
 							</div>
 							<div class="mail_form">
-								<a href="#callback" class="button fancybox">Надіслати повідомлення</a>
+								<a href="#callback" class="button fancybox">Wyslac wiadomosc</a>
 							</div>
 						</div>
 					</div>
@@ -290,10 +263,10 @@
 
 		<div class="hidden">
 			<form id="callback" class="pop_form">
-				<h3>Надіслати повідомлення на Gmail</h3>
-				<input type="text" name="name" placeholder="Ваше ім'я..." required /><br>
+				<h3>Wyslac wiadomosc na Gmail</h3>
+				<input type="text" name="name" placeholder="Imie..." required /><br>
 				<textarea type="text" name="massage" required></textarea><br>
-				<button class="button" type="submit">Відправити</button>
+				<button class="button" type="submit">Wyslij</button>
 			</form>
 		</div>
 
@@ -304,23 +277,22 @@
 			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="social_footer">
-						<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-						<a href="#"><i class="fa fa-vk"></i></a>
+						<a href="https://ok.ru/"><i class="fa fa-odnoklassniki"></i></a>
+						<a href="https://vk.com/"><i class="fa fa-vk"></i></a>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="row">
 					<div class="text_footer">
-						<p>Сайт викладача облікових дисциплін</p>
-						<span>Мішиної Людмили</span>
+						<p>Strona nauczyciela</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="contacts_footer">
-						<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
+						<p><a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa fa-envelope-o"></i>Mail</a></p>
 					</div>
 				</div>
 			</div>
