--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>Пост внутри</title>
+	<title>Artykul</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,14 +37,10 @@
 				<div class="container">
 					<div class="col-md-12">
 						<div class="row">
-							<div class="top_links">
-								<a href="#" target="_blank">Вхід</a> / 
-								<a href="#" target="_blank">Реєстрація</a>
-							</div>
 							<div class="soc_buttons">
-								<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-								<a href="#"><i class="fa fa-vk"></i></a>
-								<a href="#"><i class="fa fa-envelope-o"></i></a>
+								<a href="https://ok.ru/"><i class="fa fa-odnoklassniki"></i></a>
+								<a href="https://vk.com/"><i class="fa fa-vk"></i></a>
+								<a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa fa-envelope-o"></i></a>
 							</div>
 						</div>
 					</div>
@@ -56,31 +52,24 @@
 					<div class="col-md-12">
 						<div class="row">
 							<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
-							<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
+							<a href="index.html" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
 					<div class="border"></div>
 					<div class="col-md-9">
 						<div class="row">
 							<div class="main_menu">
 								<ul class="sf-menu">
-									<li class="active icon_mob"><a href="#"><img src="img/menu_icons/home.png" alt="home_icon">Головна</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/file.png" alt="file_icon">Методички</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/archive.png" alt="archive_icon">Бух облік</a>
-										<ul class="submenu">
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Алалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Махалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Мухалай</a></li>
-											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Тундурик</a></li>
-										</ul>
+									<li class="active icon_mob"><a href="index.html"><img src="img/menu_icons/home.png" alt="home_icon">Glowna</a></li>
+									<li class="icon_mob"><a href="zadania.html"><img src="img/menu_icons/archive.png" alt="archive_icon">Archiwum zadan</a>
 									</li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
-									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+									<li class="icon_mob"><a href="galeria_zdjec.html"><img src="img/menu_icons/folder.png" alt="folder_icon">Galeria zdjec</a></li>
+									<li class="icon_mob"><a href="materialy_z_zajec.html"><img src="img/menu_icons/file.png" alt="file_icon">Materialy z zajec</a></li>
 								</ul>
 							</div>
 						</div>
 					</div>
 								<div id="sb-search" class="sb-search">
 									<form>
-										<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
+										<input class="sb-search-input" placeholder="Wyszukiwana fraza" type="text" value="" name="search" id="search">
 										<input class="sb-search-submit" type="submit" value="">
 										<span class="sb-icon-search"></span>
 									</form>
@@ -96,35 +85,35 @@
 				<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
 					<div class="row">
 						<div class="blog_content">
-							<div class="zagolov">Стаття</div>
+							<div class="zagolov">Artykul</div>
 								<div class="box_blog">
-											<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
+											<div class="post_title"><h2><a href="#">Naglowek artykulu</a></h2></div>
 											<div class="post_meta">
 												<ul>
 												<li><i class="fa fa-eye"></i>144</li>
 												<li><i class="fa fa-check-square"></i>Mishina</li>
 												<li><i class="fa fa-calendar"></i>04.06.2014</li>
-												<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+												<li><i class="fa fa-commenting-o"></i>Komentarze (0)</li>
 											</ul>
 										</div>
 									<div class="test clearfix">
 											<a href="#"><img class="post_img" src="img/1c.png" alt="1c"></a>
-											<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,
-											обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
-											«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
-											у всіх етапах тренінгу.За підсумками проведення заходу  учасники були нагороджені сертифікатами, грамотами та пам’ятними Равным образом укрепление и развитие структуры способствует подготовки и реализации новых предложений. С другой стороны сложившаяся структура организации способствует подготовки и реализации существенных финансовых и административных условий.
+											<div class="post_text"><p>  Stworzono ciekawy i zróżnicowany program dla studentów,
+											omówienie problematycznych zagadnień. Praktyczny blok szkoleniowy został przeprowadzony w formie gry biznesowej
+											„Księgowość Lukomorye” i „Marketing w moim życiu”. Studenci aktywnie uczestniczyli
+											Na wszystkich etapach szkolenia, w wyniku wydarzenia, uczestnikom wręczono certyfikaty, dyplomy i pamiątki, podobnie wzmocnienie i rozwój struktury przyczynia się do przygotowania i wdrożenia nowych propozycji. Z drugiej strony obecna struktura organizacji sprzyja przygotowaniu i wdrożeniu istotnych warunków finansowo-administracyjnych.
 
-											Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения систем массового участия. Разнообразный и богатый опыт рамки и место обучения кадров требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции способствует подготовки и реализации направлений прогрессивного развития.
+											Zróżnicowane i bogate doświadczenie, rozpoczęcie codziennej pracy nad formowaniem stanowiska wymaga zdefiniowania i dopracowania systemów masowej partycypacji. Zróżnicowane i bogate doświadczenie ram i miejsca szkolenia personelu wymaga od nas analizy systemów masowej partycypacji. Waga tych problemów jest na tyle oczywista, że ​​rozpoczęcie codziennej pracy nad uformowaniem stanowiska przyczynia się do przygotowania i realizacji kierunków stopniowego rozwoju.
 
-											Разнообразный и богатый опыт консультация с широким активом в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации дальнейших направлений развития. Равным образом постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание соответствующий условий активизации. Задача организации, в особенности же реализация намеченных плановых заданий требуют от нас анализа новых предложений. Товарищи! новая модель организационной деятельности позволяет оценить значение системы обучения кадров, соответствует насущным потребностям.
+											Zróżnicowane i bogate doświadczenie w doradztwie z szerokim wachlarzem aktywów w dużej mierze determinuje tworzenie systemów partycypacji masowej. Zadanie organizacji, w szczególności rozpoczęcie codziennej pracy nad utworzeniem stanowiska, pociąga za sobą proces wprowadzania i unowocześniania dalszych kierunków rozwoju. Jednocześnie stały wzrost ilościowy i zakres naszej działalności w dużej mierze determinuje stworzenie odpowiednich warunków do aktywizacji. Zadania organizacji, a zwłaszcza realizacja zaplanowanych zadań, wymagają od nas analizy nowych propozycji. Towarzysze! nowy model działalności organizacyjnej pozwala oszacować wartość systemu szkolenia personelu, odpowiadającego pilnym potrzebom.
 
-											Таким образом рамки и место обучения кадров способствует подготовки и реализации форм развития. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке форм развития. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач.
+											Tym samym ramy i miejsce szkolenia sprzyjają przygotowaniu i wdrażaniu form rozwoju. Ideologiczne względy najwyższego rzędu, a także nieustanne orędowanie na rzecz naszych działań, pozwalają nam wykonywać ważne zadania w zakresie rozwoju form rozwoju. Zadanie organizacji, w szczególności rozpoczęcie codziennej pracy nad utworzeniem stanowiska, wymaga określenia i określenia stanowisk zajmowanych przez uczestników w ramach ustalonych zadań.
 
-											С другой стороны укрепление и развитие структуры позволяет оценить значение форм развития. С другой стороны укрепление и развитие структуры в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации способствует подготовки и реализации дальнейших направлений развития. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции требуют определения и уточнения направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности требуют определения и уточнения новых предложений.</p>
+											Z drugiej strony wzmocnienie i rozbudowa konstrukcji pozwala ocenić wagę form rozwoju. Z drugiej strony wzmocnienie i rozwój struktury w dużej mierze determinuje tworzenie stanowisk zajmowanych przez uczestników w związku z zadaniami. Z drugiej strony obecna struktura organizacji sprzyja przygotowaniu i realizacji dalszych kierunków rozwoju. Ideologiczne względy najwyższego rzędu, a także ramy i miejsce szkolenia personelu zapewnia szeroki zakres (specjalistów) udziału w kształtowaniu kierunków postępowego rozwoju. Znaczenie tych problemów jest na tyle oczywiste, że rozpoczęcie codziennej pracy nad formowaniem stanowiska wymaga określenia i doprecyzowania kierunków stopniowego rozwoju. Waga tych problemów jest na tyle oczywista, że ​​stały wzrost ilościowy i zakres naszej działalności wymagają zdefiniowania i dopracowania nowych propozycji.</p>
 											</div>
 									</div>
 								</div>
-							<div class="single_button"><a href="#">Повернутися до головної</a></div>
+							<div class="single_button"><a href="index.html">Na glowna</a></div>
 						</div>
 					</div>
 				</div>
@@ -133,60 +122,55 @@
 					<div class="col-lg-3 col-md-4">
 						<div class="row">
 							<div class="sidebar1">
-								<div class="zagolov" id="zagolov_sidebar">Останні записи</div>
+								<div class="zagolov" id="zagolov_sidebar">Aktualnosci</div>
 								<div class="recposts">
 									<ul>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
-										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
+										<li><a href="single.html"><i class="fa fa-paper-plane-o"></i>Naglowek artykulu</a></li>
 									</ul>
 								</div>
 							</div>
 
 							<div class="sidebar2">
-								<div class="zagolov" id="zagolov_sidebar">Корисні посилання</div>
+								<div class="zagolov" id="zagolov_sidebar">Przydatne linki</div>
 								<div class="useflinks">
 									<ul>
-										<li><a href="#"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
-										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
+										<li><a href="https://sp9koszalin.szkolnastrona.pl/"><i class="fa fa-dot-circle-o"></i>Adam Gospodarczyk – Metoda dramy na lekcji historii</a></li>
 									</ul>
 								</div>
 							</div>
 
 							<div class="sidebar3">
-								<div class="zagolov" id="zagolov_sidebar">Статистика</div>
+								<div class="zagolov" id="zagolov_sidebar">Statystyki</div>
 								<div class="statistics">
 									<ul>
-										<li>Онлайн всього: 1</li>
-										<li>Гостей: 1</li>
-										<li>Користувачів: 0</li>
+										<li>Teraz na stronie: 1</li>
+										<li>Gosci: 1</li>
+										<li>Uzytkownicy: 234</li>
 									</ul>
 								</div>
 							</div>
 							<div class="mail_form">
-								<a href="#callback" class="button fancybox">Надіслати повідомлення</a>
+								<a href="#callback" class="button fancybox">Wyslac wiadomosc</a>
 							</div>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
 		<div class="hidden">
 			<form id="callback" class="pop_form">
-				<h3>Надіслати повідомлення на Gmail</h3>
-				<input type="text" name="name" placeholder="Ваше ім'я..." required /><br>
+				<h3>Wyslac wiadomosc na Gmail</h3>
+				<input type="text" name="name" placeholder="Imie..." required /><br>
 				<textarea type="text" name="massage" required></textarea><br>
-				<button class="button" type="submit">Відправити</button>
+				<button class="button" type="submit">Wyslij</button>
 			</form>
 		</div>
 
@@ -197,23 +181,22 @@
 			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="social_footer">
-						<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-						<a href="#"><i class="fa fa-vk"></i></a>
+						<a href="https://ok.ru/"><i class="fa fa-odnoklassniki"></i></a>
+						<a href="https://vk.com/"><i class="fa fa-vk"></i></a>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="row">
 					<div class="text_footer">
-						<p>Сайт викладача облікових дисциплін</p>
-						<span>Мішиної Людмили</span>
+						<p>Strona nauczyciela</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="contacts_footer">
-						<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
+						<p><a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa fa-envelope-o"></i>Mail</a></p>
 					</div>
 				</div>
 			</div>
